--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
@@ -18,15 +18,17 @@
     "@angular/platform-browser": "^15.1.0",
     "@angular/platform-browser-dynamic": "^15.1.0",
     "@angular/router": "^15.1.0",
+    "express": "^4.18.2",
     "flowbite": "^1.6.3",
+    "path": "^0.12.7",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^15.1.3",
-    "@angular/cli": "~15.1.3",
-    "@angular/compiler-cli": "^15.1.0",
+    "@angular/cli": "^15.1.4",
+    "@angular/compiler-cli": "^15.1.2",
     "@types/jasmine": "~4.3.0",
     "autoprefixer": "^10.4.13",
     "jasmine-core": "~4.5.0",
@@ -38,5 +40,10 @@
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.4",
     "typescript": "~4.9.4"
+  },
+  "engines": {
+    "node":"18.13.0",
+    "npm": "8.19.3"
+
   }
 }
